United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7086226 UseNUMA fails on old versions of windows
7086226 : UseNUMA fails on old versions of windows

Details
Type:
Bug
Submit Date:
2011-09-02
Status:
Closed
Updated Date:
2011-11-28
Project Name:
JDK
Resolved Date:
2011-11-28
Component:
hotspot
OS:
windows
Sub-Component:
gc
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs22
Fixed Versions:
hs22

Related Reports
Backport:
Backport:

Sub Tasks

Description
On windows os::numa_get_groups_num() return the wrong answer (0) for machines, where the NUMA API is not supported. Moreover, UseNUMA switches on the NUMA-aware allocator with PS, which doesn't make sense on Windows so far.

                                    

Comments
EVALUATION

See main CR
                                     
2011-09-12
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-gc/hotspot/rev/a6128a8ed624
                                     
2011-09-08



Hardware and Software, Engineered to Work Together