7086226: UseNUMA fails on old versions of windows

Return correct answers from os::numa_*() for UMA machines or if NUMA API is not supported

Reviewed-by: johnc